ESP32 Bluetooth App
Table add

--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ControlActivity">
 
@@ -171,7 +171,6 @@
         android:text="@string/add_to_queue"
         app:layout_constraintBottom_toTopOf="@+id/bReset"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -185,15 +184,16 @@
         android:text="@string/execute"
         app:layout_constraintBottom_toTopOf="@+id/bAdd2Q"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TableLayout
         android:id="@+id/tLayout1"
-        android:layout_width="368dp"
-        android:layout_height="249dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="5dp"
+        android:background="@drawable/divider"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toTopOf="@+id/bExecute"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
